// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering tests Endpoint provided - no dropdown rendered 1`] = `
<form
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="field"
  >
    <label>
      Body
    </label>
    <div>
      This is a placeholder for the JSON editor.
      <pre>
        <code>
          {"height":"300px","value":"{\\n  \\"status\\": \\"OK\\"\\n}"}
        </code>
      </pre>
    </div>
  </div>
  <button
    className="ui button"
    onClick={[Function]}
  >
    Send
  </button>
</form>
`;

exports[`Rendering tests No endpoint provided - dropdown rendered 1`] = `
<form
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="required field"
  >
    <label>
      Url
    </label>
    <div
      aria-expanded={false}
      className="ui search selection dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        autoComplete="off"
        className="search"
        onChange={[Function]}
        style={
          Object {
            "width": undefined,
          }
        }
        tabIndex={0}
        type="text"
        value=""
      />
      <div
        aria-live="polite"
        className="text"
        role="alert"
      />
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
        role="listbox"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            /unit-test-org/unit-test-1
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            /unit-test-org/unit-test-2
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="field"
  >
    <label>
      Body
    </label>
    <div>
      This is a placeholder for the JSON editor.
      <pre>
        <code>
          {"height":"300px","value":"{\\n  \\"status\\": \\"OK\\"\\n}"}
        </code>
      </pre>
    </div>
  </div>
  <button
    className="ui disabled button"
    disabled={true}
    onClick={[Function]}
    tabIndex={-1}
  >
    Send
  </button>
</form>
`;
